--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -24,7 +24,7 @@ jobs:
         cache: maven
     - name: Build with Maven
       run: |
-        ./mvnw -B package --file pom.xml
+        mvn --batch-mode --update-snapshots package
     
     - name: Add coverage to PR
       id: jacoco
