--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -5,9 +5,9 @@ name: Java CI with Maven & Jacoco coverage
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "master" ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "master" ]
 
 jobs:
   build:
@@ -22,6 +22,9 @@ jobs:
         java-version: '17'
         distribution: 'temurin'
         cache: maven
+        
+    - name: Change wrapper permissions
+      run: chmod +x ./mvnw
     - name: Build with Maven
       run: |
         ./mvnw -B package --file pom.xml
@@ -30,7 +33,7 @@ jobs:
       id: jacoco
       uses: madrapps/jacoco-report@v1.3
       with:
-        paths: ${{ github.workspace }}/intellistart-java-2022-dreamteam/target/site/jacoco/jacoco.xml
+        paths: ${{ github.workspace }}/target/site/jacoco/jacoco.xml
         token: ${{ secrets.OWL_REPO_COMMIT_TOKEN }}
         min-coverage-overall: 10
         min-coverage-changed-files: 10
