--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,9 +4,26 @@ spring:
     username: ${DATABASE_USERNAME}
     password: ${DATABASE_PASSWORD}
   jpa:
-    hibernate.ddl-auto: create-drop
+    hibernate.ddl-auto: create
+    defer-datasource-initialization: true
     show-sql: true
     database-platform: "org.hibernate.dialect.PostgreSQLDialect"
-#    properties:
-#      hibernate:
-#        format_sql: true
+    properties:
+      hibernate:
+        format_sql: true
+  sql:
+    init:
+      mode: always
+
+#  datasource:
+#    url: "jdbc:h2:mem:owlmailtest"
+#    driverClassName: "org.h2.Driver"
+#    username: dd
+#    password:
+#  jpa:
+#    database-platform: org.hibernate.dialect.H2Dialect
+#  h2:
+#    console.enabled: true
+#  sql:
+#    init:
+#      mode: always
