--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,8 +4,8 @@ spring:
     username: ${DATABASE_USERNAME}
     password: ${DATABASE_PASSWORD}
   jpa:
-    hibernate.ddl-auto: create
-    defer-datasource-initialization: true
+    hibernate.ddl-auto: none
+    defer-datasource-initialization: false
     show-sql: true
     database-platform: "org.hibernate.dialect.PostgreSQLDialect"
     properties:
